# soacpp

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  TODO.md
examples/: main.cpp
include/: soa.h
tests/: tests.cpp
